org.springframework.boot.autoconfigure.AutoConfiguration.imports / Common enums / Utils